--- a/package.json
+++ b/package.json
@@ -134,77 +134,77 @@
         ".eslintignore",
         ".eslintrc.json",
         ".gitignore",
-        ".prettierrc.json",
         ".prettierignore",
+        ".prettierrc.json",
         "license",
         "readme.md",
         "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
+        "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
         "package.json",
-        "emojitypescommitmessages.txt",
-        "renovate.json",
-        "typedoc.json",
         "release.config.ts",
+        "renovate.json",
         "tsconfig.json",
+        "typedoc.json",
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
+        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        "repo_management_files/genericcommitmessages.md",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
         ".github/workflows/docs.yml",
         ".github/workflows/lint.yml",
-        ".github/workflows/release.yml",
         ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
         ".github/workflows/test.yml",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
+        ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
         ".husky/_/h",
+        ".husky/_/post-applypatch",
         ".husky/_/post-checkout",
         ".husky/_/post-commit",
-        ".husky/_/post-applypatch",
         ".husky/_/post-merge",
-        ".husky/_/pre-applypatch",
         ".husky/_/post-rewrite",
-        ".husky/_/.gitignore",
+        ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
+        ".husky/_/pre-commit",
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
-        ".husky/_/pre-commit",
         "src/app.ts",
         "src/bin/.gitkeep",
-        "src/controllers/.gitkeep",
         "src/configs/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/middleware/.gitkeep",
         "src/models/.gitkeep",
         "src/plugins/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/views/.gitkeep",
         "src/routes/.gitkeep",
         "src/utils/.gitkeep",
+        "src/views/.gitkeep",
         "test/.gitkeep",
         "test/app.test.ts",
-        "test/configs/.gitkeep",
         "test/bin/.gitkeep",
+        "test/configs/.gitkeep",
+        "test/controllers/.gitkeep",
         "test/middleware/.gitkeep",
         "test/models/.gitkeep",
-        "test/controllers/.gitkeep",
+        "test/plugins/.gitkeep",
         "test/routes/.gitkeep",
-        "test/views/.gitkeep",
         "test/utils/.gitkeep",
-        "test/plugins/.gitkeep"
+        "test/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
