:bug: fix(.github/workflows/test.yml): removed directory config from workflow
removed the directory option in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,12 +38,13 @@ jobs:
         run: npm test
 
       - name: 📤 📊 Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.5.0
+        uses: codecov/codecov-action@v4
+        # https://apache.googlesource.com/airflow-codecov-action/+/f8c87eb84eff353c49fcb2f295110a82afdca7ae/README.md#arguments
         with:
           token: ${{ secrets.token }} # not required for public repos
           # file: ./coverage.xml # optional
           # files: ./coverage1.xml,./coverage2.xml # optional
-          directory: ./coverage/lcov-report/ # optional
+          # directory: ./coverage/reports/ # optional
           flags: unittests # optional
           # env_vars: OS,NODE  # optional
           name: ☂️ codecov-umbrella # optional
