:bug: fix(package.json): fixed toggling delete of coverage.svg
manually deleting coverage.svg before running typedoc to fix weird issue with it not generating if it already exists

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "dev:pre": "bun run upgrade:full && bun rebuild && bun run dep:update:all && echo \"YOU CAN ALSO RUN npm-check TO SEE ADDITIONAL DEPENDENCY UPDATES\" && npm i && bun run depcheck && bun run prune:mod && bun run license:summary && bun format && bun run security",
     "dev:win": "bun i && bun concurrently -k \"bun run hot-reload & start http://127.0.0.1:3000\" \"bun run dev:post\"",
     "dev:wsl": "bun i && bun concurrently -k \"bun run hot-reload & wslview http://127.0.0.1:3000\" \"bun run dev:post\"",
-    "docs": "echo building typedocs; bun typedoc --validation.notDocumented --plugin typedoc-plugin-coverage >/dev/null",
+    "docs": "echo building typedocs; rm -f ./docs/typedocs/coverage.svg && bun typedoc --validation.notDocumented --plugin typedoc-plugin-coverage",
     "format": "sort-package-json && bun prettier --write . --cache --cache-strategy metadata --log-level log | grep -v \"unchanged\" | xargs",
     "format:git:modified": "bun prettier --write $(git diff --name-only --diff-filter d | grep '.ts$' | xargs)",
     "format:watch": "bunx onchange \"**/*\" -- prettier --write --cache --cache-strategy metadata --ignore-unknown {{changed}}",
@@ -132,8 +132,8 @@
       "scopes": [
         ".depcheckrc.json",
         ".eslintrc.json",
-        ".gitignore",
         ".eslintignore",
+        ".gitignore",
         ".prettierignore",
         ".prettierrc.json",
         "license",
@@ -141,32 +141,25 @@
         "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
-        "emojitypescommitmessages.txt",
         "jest.config.json",
+        "emojitypescommitmessages.txt",
         "package-lock.json",
-        "package.json",
         "release.config.ts",
-        "renovate.json",
+        "package.json",
         "tsconfig.json",
+        "renovate.json",
         "typedoc.json",
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
-        "repo_management_files/extractfilescopes.js",
         "repo_management_files/genericcommitmessages.md",
-        "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
+        "repo_management_files/extractfilescopes.js",
+        "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/packagejsondocument.md",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
@@ -176,35 +169,42 @@
         ".husky/_/post-applypatch",
         ".husky/_/post-checkout",
         ".husky/_/post-commit",
-        ".husky/_/post-merge",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
         ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
-        ".husky/_/pre-push",
+        ".husky/_/post-merge",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
+        ".husky/_/pre-push",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
         "src/app.ts",
         "src/bin/.gitkeep",
         "src/controllers/.gitkeep",
-        "src/configs/.gitkeep",
         "src/middleware/.gitkeep",
         "src/models/.gitkeep",
         "src/plugins/.gitkeep",
-        "src/routes/.gitkeep",
         "src/utils/.gitkeep",
+        "src/configs/.gitkeep",
         "src/views/.gitkeep",
+        "src/routes/.gitkeep",
         "test/.gitkeep",
         "test/app.test.ts",
         "test/bin/.gitkeep",
-        "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
         "test/middleware/.gitkeep",
         "test/plugins/.gitkeep",
-        "test/models/.gitkeep",
+        "test/views/.gitkeep",
         "test/routes/.gitkeep",
+        "test/configs/.gitkeep",
         "test/utils/.gitkeep",
-        "test/views/.gitkeep"
+        "test/models/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
