:rocket: deploy(typedoc.json): deploying docs
setup typedocs to be deployed with github pages

--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "dev:pre": "bun run upgrade:full && bun rebuild && bun run dep:update:all && echo \"YOU CAN ALSO RUN npm-check TO SEE ADDITIONAL DEPENDENCY UPDATES\" && npm i && bun run depcheck && bun run prune:mod && bun run license:summary && bun format && bun run security",
     "dev:win": "bun i && bun concurrently -k \"bun run hot-reload & start http://127.0.0.1:3000\" \"bun run dev:post\"",
     "dev:wsl": "bun i && bun concurrently -k \"bun run hot-reload & wslview http://127.0.0.1:3000\" \"bun run dev:post\"",
-    "docs": "echo building typedocs; rm -f ./docs/typedocs/coverage.svg && bun typedoc --validation.notDocumented --plugin typedoc-plugin-coverage",
+    "docs": "echo building typedocs; rm -f ./docs/typedocs/coverage.svg && bun typedoc --validation.notDocumented --plugin typedoc-plugin-coverage --plugin typedoc-plugin-extras --options typedoc.json ./src/app.ts",
+    "docs:publish": "bunx gh-pages -b gh-pages -d ./docs/typedocs",
     "format": "sort-package-json && bun prettier --write . --cache --cache-strategy metadata --log-level log | grep -v \"unchanged\" | xargs",
     "format:git:modified": "bun prettier --write $(git diff --name-only --diff-filter d | grep '.ts$' | xargs)",
     "format:watch": "bunx onchange \"**/*\" -- prettier --write --cache --cache-strategy metadata --ignore-unknown {{changed}}",
@@ -137,74 +138,75 @@
         ".prettierignore",
         ".prettierrc.json",
         "license",
-        "readme.md",
+        "readme-api.md",
         "commit-template.hbs",
         "commitlint.config.ts",
+        "readme.md",
         "default-template.hbs",
-        "jest.config.json",
         "emojitypescommitmessages.txt",
+        "jest.config.json",
         "package-lock.json",
-        "release.config.ts",
         "package.json",
-        "tsconfig.json",
+        "release.config.ts",
         "renovate.json",
         "typedoc.json",
+        "tsconfig.json",
         ".vscode/settings.json",
         "public/.gitkeep",
-        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
-        "repo_management_files/genericcommitmessages.md",
-        "repo_management_files/issues.sh",
-        "repo_management_files/labels.sh",
         "repo_management_files/extractfilescopes.js",
+        "repo_management_files/genericcommitmessages.md",
+        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/gitmojisemver-extract.js",
+        "repo_management_files/issues.sh",
         "repo_management_files/packagejsondocument.md",
+        "repo_management_files/labels.sh",
+        ".github/dependabot.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
-        ".husky/_/h",
         ".husky/_/post-applypatch",
         ".husky/_/post-checkout",
         ".husky/_/post-commit",
-        ".husky/_/post-rewrite",
-        ".husky/_/pre-applypatch",
-        ".husky/_/pre-auto-gc",
-        ".husky/_/pre-commit",
         ".husky/_/post-merge",
+        ".husky/_/post-rewrite",
+        ".husky/_/h",
+        ".husky/_/pre-auto-gc",
+        ".husky/_/pre-applypatch",
+        ".husky/_/pre-commit",
+        ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
-        ".husky/_/pre-push",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
-        "src/app.ts",
-        "src/bin/.gitkeep",
-        "src/controllers/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/models/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/utils/.gitkeep",
-        "src/configs/.gitkeep",
-        "src/views/.gitkeep",
-        "src/routes/.gitkeep",
         "test/.gitkeep",
         "test/app.test.ts",
         "test/bin/.gitkeep",
+        "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
         "test/middleware/.gitkeep",
+        "test/models/.gitkeep",
+        "test/utils/.gitkeep",
+        "test/routes/.gitkeep",
         "test/plugins/.gitkeep",
         "test/views/.gitkeep",
-        "test/routes/.gitkeep",
-        "test/configs/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/models/.gitkeep"
+        "src/app.ts",
+        "src/bin/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/models/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/views/.gitkeep",
+        "src/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
@@ -243,6 +245,7 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-security": "3.0.1",
     "five-server": "0.3.3",
+    "gh-pages": "^6.1.1",
     "gitmoji-parser-opts": "1.0.0",
     "husky": "9.1.1",
     "jest": "29.7.0",
@@ -261,7 +264,8 @@
     "sort-package-json": "2.10.0",
     "ts-jest": "29.2.3",
     "typedoc": "0.26.5",
-    "typedoc-plugin-coverage": "3.3.0"
+    "typedoc-plugin-coverage": "3.3.0",
+    "typedoc-plugin-extras": "^3.1.0"
   },
   "publishConfig": {
     "access": "public"
