:bug: fix(package.json): fixed cm to run npm install to update lockfile
to prevent me from forgetting to run npm install before committing

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "build:devdeps2": "grep -Fxv -f <(cat d) <(cat dd) | awk '{print $1 > \"dd\"}'",
     "build:devdeps:badges": "bun run build:deps && bun run build:devdeps1 && bun run build:devdeps2 && cat dd | xargs npx update-badge --behind  && rm d dd",
     "clean": "rm -rf node_modules",
-    "cm": "git pull && node repo_management_files/extractFileScopes.js && git add . && bun git:all &&  cz",
+    "cm": "git pull && node repo_management_files/extractFileScopes.js && npm install && git add . && bun git:all &&  cz",
     "dep:check": "bunx upgradeps && npm outdated | xargs && bunx npm-check-updates && bunx check-dependencies && bun ./node_modules/npm-check/bin/cli.js -s | xargs && npm audit",
     "dep:skip": "bunx upgradeps -s semantic-release",
     "dep:update:all": "bunx upgradeps -u -f -s semantic-release,eslint",
@@ -135,78 +135,78 @@
         ".eslintrc.json",
         ".eslintignore",
         ".gitignore",
-        ".prettierignore",
         ".prettierrc.json",
+        ".prettierignore",
         "license",
         "readme-api.md",
+        "readme.md",
         "commit-template.hbs",
         "commitlint.config.ts",
-        "readme.md",
-        "default-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
-        "package-lock.json",
+        "default-template.hbs",
         "package.json",
+        "package-lock.json",
         "release.config.ts",
         "renovate.json",
-        "typedoc.json",
         "tsconfig.json",
+        "typedoc.json",
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
+        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/extractfilescopes.js",
         "repo_management_files/genericcommitmessages.md",
-        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
-        "repo_management_files/packagejsondocument.md",
         "repo_management_files/labels.sh",
-        ".github/dependabot.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
+        "repo_management_files/packagejsondocument.md",
         ".husky/commit-msg",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
+        ".husky/_/h",
         ".husky/_/commit-msg",
         ".husky/_/post-applypatch",
-        ".husky/_/post-checkout",
         ".husky/_/post-commit",
         ".husky/_/post-merge",
         ".husky/_/post-rewrite",
-        ".husky/_/h",
-        ".husky/_/pre-auto-gc",
         ".husky/_/pre-applypatch",
-        ".husky/_/pre-commit",
+        ".husky/_/pre-auto-gc",
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
+        ".husky/_/post-checkout",
+        ".husky/_/pre-commit",
+        ".github/dependabot.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
+        ".github/workflows/build.yml",
         "test/.gitkeep",
         "test/app.test.ts",
         "test/bin/.gitkeep",
         "test/configs/.gitkeep",
-        "test/controllers/.gitkeep",
         "test/middleware/.gitkeep",
-        "test/models/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/routes/.gitkeep",
         "test/plugins/.gitkeep",
+        "test/routes/.gitkeep",
+        "test/utils/.gitkeep",
+        "test/models/.gitkeep",
         "test/views/.gitkeep",
+        "test/controllers/.gitkeep",
         "src/app.ts",
+        "src/configs/.gitkeep",
         "src/bin/.gitkeep",
         "src/controllers/.gitkeep",
         "src/models/.gitkeep",
         "src/middleware/.gitkeep",
         "src/routes/.gitkeep",
-        "src/configs/.gitkeep",
-        "src/plugins/.gitkeep",
+        "src/utils/.gitkeep",
         "src/views/.gitkeep",
-        "src/utils/.gitkeep"
+        "src/plugins/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
