--- a/package.json
+++ b/package.json
@@ -132,81 +132,81 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintrc.json",
         ".eslintignore",
+        ".eslintrc.json",
         ".gitignore",
-        ".prettierrc.json",
         ".prettierignore",
+        ".prettierrc.json",
         "license",
         "readme-api.md",
         "readme.md",
         "commit-template.hbs",
         "commitlint.config.ts",
+        "default-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
-        "default-template.hbs",
-        "package.json",
         "package-lock.json",
+        "package.json",
         "release.config.ts",
         "renovate.json",
         "tsconfig.json",
         "typedoc.json",
         ".vscode/settings.json",
         "public/.gitkeep",
+        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
-        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/extractfilescopes.js",
         "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        ".husky/commit-msg",
-        ".husky/prepare-commit-msg",
-        ".husky/_/.gitignore",
-        ".husky/_/applypatch-msg",
-        ".husky/_/h",
-        ".husky/_/commit-msg",
-        ".husky/_/post-applypatch",
-        ".husky/_/post-commit",
-        ".husky/_/post-merge",
-        ".husky/_/post-rewrite",
-        ".husky/_/pre-applypatch",
-        ".husky/_/pre-auto-gc",
-        ".husky/_/pre-push",
-        ".husky/_/pre-rebase",
-        ".husky/_/prepare-commit-msg",
-        ".husky/_/post-checkout",
-        ".husky/_/pre-commit",
         ".github/dependabot.yml",
+        ".github/workflows/build.yml",
         ".github/workflows/docs.yml",
         ".github/workflows/lint.yml",
         ".github/workflows/pr.yml",
         ".github/workflows/release.yml",
         ".github/workflows/test.yml",
-        ".github/workflows/build.yml",
+        ".husky/commit-msg",
+        ".husky/prepare-commit-msg",
+        ".husky/_/.gitignore",
+        ".husky/_/applypatch-msg",
+        ".husky/_/commit-msg",
+        ".husky/_/h",
+        ".husky/_/post-applypatch",
+        ".husky/_/post-checkout",
+        ".husky/_/post-commit",
+        ".husky/_/post-merge",
+        ".husky/_/post-rewrite",
+        ".husky/_/pre-applypatch",
+        ".husky/_/pre-auto-gc",
+        ".husky/_/pre-commit",
+        ".husky/_/pre-push",
+        ".husky/_/pre-rebase",
+        ".husky/_/prepare-commit-msg",
+        "src/app.ts",
+        "src/bin/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/models/.gitkeep",
+        "src/views/.gitkeep",
+        "src/utils/.gitkeep",
+        "src/routes/.gitkeep",
         "test/.gitkeep",
         "test/app.test.ts",
         "test/bin/.gitkeep",
-        "test/configs/.gitkeep",
+        "test/controllers/.gitkeep",
         "test/middleware/.gitkeep",
+        "test/models/.gitkeep",
         "test/plugins/.gitkeep",
         "test/routes/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/models/.gitkeep",
+        "test/configs/.gitkeep",
         "test/views/.gitkeep",
-        "test/controllers/.gitkeep",
-        "src/app.ts",
-        "src/configs/.gitkeep",
-        "src/bin/.gitkeep",
-        "src/controllers/.gitkeep",
-        "src/models/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/utils/.gitkeep",
-        "src/views/.gitkeep",
-        "src/plugins/.gitkeep"
+        "test/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
