:construction_worker: ci(.husky/pre-commit): adding pre-commit hook using validate-branch-name
added new branch validation hook and documentation

--- a/package.json
+++ b/package.json
@@ -124,6 +124,10 @@
     "upgrade:clean": "rm -rf node_modules && rm bun.lockb package-lock.json && bun pm cache rm && sudo bun i -g n && sudo n prune || true && sudo npm uninstall -g n && sudo rm -rf /usr/local/n && sudo rm -f /usr/local/bin/node",
     "upgrade:full": "bun run upgrade:clean && bun run upgrade"
   },
+  "validate-branch-name": {
+    "pattern": "^(main|develop){1}$|^(feature|fix|hotfix|release|experimental|chore|docs|dependabot|renovate)/.+$",
+    "errorMsg": "Your branch name does not meet the Brand Naming conventions.\nPlease review ./repo_management_files/branchNamingConventions.md and ./package.json#L128 for rules"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-gitmoji-adapter",
@@ -139,43 +143,38 @@
         ".prettierrc.json",
         "license",
         "readme-api.md",
-        "readme.md",
         "commit-template.hbs",
+        "readme.md",
         "commitlint.config.ts",
         "default-template.hbs",
-        "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
         "package.json",
         "release.config.ts",
         "renovate.json",
-        "tsconfig.json",
+        "emojitypescommitmessages.txt",
         "typedoc.json",
+        "tsconfig.json",
         ".vscode/settings.json",
-        "public/.gitkeep",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
+        "repo_management_files/branchnamingconventions.md",
         "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
+        "public/.gitkeep",
         ".husky/commit-msg",
+        ".husky/pre-commit",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
-        ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
-        ".husky/_/h",
+        ".husky/_/applypatch-msg",
         ".husky/_/post-applypatch",
+        ".husky/_/h",
         ".husky/_/post-checkout",
         ".husky/_/post-commit",
         ".husky/_/post-merge",
@@ -186,27 +185,34 @@
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
-        "src/app.ts",
-        "src/bin/.gitkeep",
-        "src/controllers/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/configs/.gitkeep",
-        "src/models/.gitkeep",
-        "src/views/.gitkeep",
-        "src/utils/.gitkeep",
-        "src/routes/.gitkeep",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/test.yml",
         "test/.gitkeep",
         "test/app.test.ts",
         "test/bin/.gitkeep",
+        "test/configs/.gitkeep",
         "test/controllers/.gitkeep",
         "test/middleware/.gitkeep",
         "test/models/.gitkeep",
-        "test/plugins/.gitkeep",
+        "test/utils/.gitkeep",
         "test/routes/.gitkeep",
-        "test/configs/.gitkeep",
         "test/views/.gitkeep",
-        "test/utils/.gitkeep"
+        "test/plugins/.gitkeep",
+        "src/app.ts",
+        "src/controllers/.gitkeep",
+        "src/bin/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/models/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/utils/.gitkeep",
+        "src/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
