:construction_worker: ci(.github/workflows/depcheck.yml): adding depcheck to github action workflows
adding depcheck to prevent PR's with unused dependancies

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,6 +9,10 @@ on:
       - alpha
       - rc-*
 jobs:
+  call-worflow-depcheck:
+    if: ${{ github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'}}
+    name: 🔍🔗 Check Dependencies
+    uses: ./.github/workflows/depcheck.yml
   call-worflow-docs:
     if: ${{ github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'}}
     name: 📝 Creating Documentation
