--- a/package.json
+++ b/package.json
@@ -143,39 +143,47 @@
         ".prettierrc.json",
         "license",
         "readme-api.md",
-        "commit-template.hbs",
         "readme.md",
+        "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
+        "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
         "package.json",
         "release.config.ts",
         "renovate.json",
-        "emojitypescommitmessages.txt",
-        "typedoc.json",
         "tsconfig.json",
+        "typedoc.json",
         ".vscode/settings.json",
+        "public/.gitkeep",
+        "repo_management_files/branchnamingconventions.md",
         "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
-        "repo_management_files/branchnamingconventions.md",
         "repo_management_files/genericcommitmessages.md",
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
-        "public/.gitkeep",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/depcheck.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
         ".husky/commit-msg",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
-        ".husky/_/commit-msg",
         ".husky/_/applypatch-msg",
-        ".husky/_/post-applypatch",
         ".husky/_/h",
+        ".husky/_/post-applypatch",
         ".husky/_/post-checkout",
+        ".husky/_/commit-msg",
         ".husky/_/post-commit",
         ".husky/_/post-merge",
         ".husky/_/post-rewrite",
@@ -185,13 +193,16 @@
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/test.yml",
+        "src/app.ts",
+        "src/bin/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/models/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/views/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/utils/.gitkeep",
         "test/.gitkeep",
         "test/app.test.ts",
         "test/bin/.gitkeep",
@@ -199,20 +210,10 @@
         "test/controllers/.gitkeep",
         "test/middleware/.gitkeep",
         "test/models/.gitkeep",
-        "test/utils/.gitkeep",
         "test/routes/.gitkeep",
-        "test/views/.gitkeep",
+        "test/utils/.gitkeep",
         "test/plugins/.gitkeep",
-        "src/app.ts",
-        "src/controllers/.gitkeep",
-        "src/bin/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/models/.gitkeep",
-        "src/configs/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/utils/.gitkeep",
-        "src/views/.gitkeep"
+        "test/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
