--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "dep:update:check": "bunx upgradeps",
     "dep:update:skip": "bunx upgradeps -u -s",
     "depcheck": "bunx depcheck | xargs",
+    "depcheck:ci": "bunx depcheck",
     "dev": "bun i && bun run build:bun && bun concurrently -k \"bun run hot-reload\" \"bun run live-reload\" \"bun run format:watch\" \"bun run test:watch:fast\"",
     "dev:all": "git pull && bun run dev:pre && bun run lint:quick && bun run lint:ox && bun run dev:build",
     "dev:build": "bun run build && bun run docs && bun dev",
@@ -136,8 +137,8 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintignore",
         ".eslintrc.json",
+        ".eslintignore",
         ".gitignore",
         ".prettierignore",
         ".prettierrc.json",
@@ -151,14 +152,13 @@
         "jest.config.json",
         "package-lock.json",
         "package.json",
-        "release.config.ts",
         "renovate.json",
+        "release.config.ts",
         "tsconfig.json",
         "typedoc.json",
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/branchnamingconventions.md",
-        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
@@ -166,6 +166,7 @@
         "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
+        "repo_management_files/cz-emoji-type-extract.js",
         "repo_management_files/packagejsondocument.md",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
@@ -179,41 +180,41 @@
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
         ".husky/_/.gitignore",
-        ".husky/_/applypatch-msg",
+        ".husky/_/commit-msg",
         ".husky/_/h",
         ".husky/_/post-applypatch",
-        ".husky/_/post-checkout",
-        ".husky/_/commit-msg",
         ".husky/_/post-commit",
         ".husky/_/post-merge",
         ".husky/_/post-rewrite",
+        ".husky/_/applypatch-msg",
+        ".husky/_/post-checkout",
         ".husky/_/pre-applypatch",
-        ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
+        ".husky/_/pre-auto-gc",
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
         "src/app.ts",
         "src/bin/.gitkeep",
-        "src/controllers/.gitkeep",
         "src/configs/.gitkeep",
+        "src/controllers/.gitkeep",
         "src/models/.gitkeep",
-        "src/middleware/.gitkeep",
         "src/plugins/.gitkeep",
-        "src/views/.gitkeep",
         "src/routes/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/views/.gitkeep",
         "src/utils/.gitkeep",
-        "test/.gitkeep",
         "test/app.test.ts",
-        "test/bin/.gitkeep",
+        "test/.gitkeep",
         "test/configs/.gitkeep",
+        "test/bin/.gitkeep",
         "test/controllers/.gitkeep",
-        "test/middleware/.gitkeep",
-        "test/models/.gitkeep",
-        "test/routes/.gitkeep",
-        "test/utils/.gitkeep",
         "test/plugins/.gitkeep",
-        "test/views/.gitkeep"
+        "test/models/.gitkeep",
+        "test/middleware/.gitkeep",
+        "test/utils/.gitkeep",
+        "test/views/.gitkeep",
+        "test/routes/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
