:green_heart: fix-ci(.github/workflows/depcheck.yml): saved changes to used depcheck:ci script
forgot to save changes from last commit

--- a/.github/workflows/depcheck.yml
+++ b/.github/workflows/depcheck.yml
@@ -31,5 +31,5 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: 🔍🔗 Check Project Unused Dependencies
-        run: bun run depcheck
+        run: bun run depcheck:ci
       #Need to run dependency-version-badge and edit the readme file here as well.
