--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "dep:update:check": "bunx upgradeps",
     "dep:update:skip": "bunx upgradeps -u -s",
     "depcheck": "bunx depcheck | xargs",
-    "depcheck:ci": "bunx depcheck",
+    "depcheck:ci": "echo NOTE: If this errors out please consider removing dependencies or adding them to the .depcheckrc.json `ignores` array && bunx depcheck",
     "dev": "bun i && bun run build:bun && bun concurrently -k \"bun run hot-reload\" \"bun run live-reload\" \"bun run format:watch\" \"bun run test:watch:fast\"",
     "dev:all": "git pull && bun run dev:pre && bun run lint:quick && bun run lint:ox && bun run dev:build",
     "dev:build": "bun run build && bun run docs && bun dev",
@@ -137,17 +137,17 @@
     "cz-gitmoji-adapter": {
       "scopes": [
         ".depcheckrc.json",
-        ".eslintrc.json",
         ".eslintignore",
+        ".eslintrc.json",
         ".gitignore",
         ".prettierignore",
+        ".prettierrc.json",
         "license",
         "readme-api.md",
         "readme.md",
-        ".prettierrc.json",
+        "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
-        "commit-template.hbs",
         "emojitypescommitmessages.txt",
         "jest.config.json",
         "package-lock.json",
@@ -156,65 +156,65 @@
         "renovate.json",
         "tsconfig.json",
         "typedoc.json",
-        "public/.gitkeep",
         ".vscode/settings.json",
+        "public/.gitkeep",
         "repo_management_files/branchnamingconventions.md",
         "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
-        "repo_management_files/cz-emoji-type-extract.js",
-        "repo_management_files/genericcommitmessages.md",
-        "repo_management_files/gitmojisemver-extract.js",
         "repo_management_files/extractfilescopes.js",
+        "repo_management_files/cz-emoji-type-extract.js",
+        "repo_management_files/gitmojisemver-extract.js",
+        "repo_management_files/genericcommitmessages.md",
         "repo_management_files/labels.sh",
-        "repo_management_files/issues.sh",
         "repo_management_files/packagejsondocument.md",
+        "repo_management_files/issues.sh",
         ".github/dependabot.yml",
         ".github/workflows/build.yml",
-        ".github/workflows/docs.yml",
         ".github/workflows/depcheck.yml",
+        ".github/workflows/docs.yml",
         ".github/workflows/lint.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
         ".github/workflows/pr.yml",
-        ".husky/commit-msg",
+        ".github/workflows/test.yml",
+        ".github/workflows/release.yml",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
+        ".husky/commit-msg",
         ".husky/_/.gitignore",
+        ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
         ".husky/_/h",
-        ".husky/_/post-applypatch",
-        ".husky/_/post-commit",
         ".husky/_/post-checkout",
-        ".husky/_/applypatch-msg",
+        ".husky/_/post-commit",
         ".husky/_/post-merge",
         ".husky/_/post-rewrite",
         ".husky/_/pre-applypatch",
+        ".husky/_/post-applypatch",
         ".husky/_/pre-auto-gc",
         ".husky/_/pre-commit",
+        ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
-        ".husky/_/pre-push",
-        "test/app.test.ts",
+        "src/app.ts",
+        "src/bin/.gitkeep",
+        "src/models/.gitkeep",
+        "src/middleware/.gitkeep",
+        "src/controllers/.gitkeep",
+        "src/configs/.gitkeep",
+        "src/utils/.gitkeep",
+        "src/routes/.gitkeep",
+        "src/plugins/.gitkeep",
+        "src/views/.gitkeep",
         "test/.gitkeep",
+        "test/app.test.ts",
         "test/bin/.gitkeep",
         "test/controllers/.gitkeep",
         "test/configs/.gitkeep",
-        "test/middleware/.gitkeep",
+        "test/routes/.gitkeep",
         "test/plugins/.gitkeep",
         "test/models/.gitkeep",
+        "test/middleware/.gitkeep",
         "test/utils/.gitkeep",
-        "test/views/.gitkeep",
-        "test/routes/.gitkeep",
-        "src/app.ts",
-        "src/controllers/.gitkeep",
-        "src/bin/.gitkeep",
-        "src/middleware/.gitkeep",
-        "src/models/.gitkeep",
-        "src/routes/.gitkeep",
-        "src/plugins/.gitkeep",
-        "src/configs/.gitkeep",
-        "src/utils/.gitkeep",
-        "src/views/.gitkeep"
+        "test/views/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
