--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "dep:update:check": "bunx upgradeps",
     "dep:update:skip": "bunx upgradeps -u -s",
     "depcheck": "bunx depcheck | xargs",
-    "depcheck:ci": "echo NOTE: If this errors out please consider removing dependencies or adding them to the .depcheckrc.json `ignores` array && bunx depcheck",
+    "depcheck:ci": "echo NOTE: If this errors out please consider removing dependencies from package.json or adding them to the .depcheckrc.json `ignores` array && bunx depcheck",
     "dev": "bun i && bun run build:bun && bun concurrently -k \"bun run hot-reload\" \"bun run live-reload\" \"bun run format:watch\" \"bun run test:watch:fast\"",
     "dev:all": "git pull && bun run dev:pre && bun run lint:quick && bun run lint:ox && bun run dev:build",
     "dev:build": "bun run build && bun run docs && bun dev",
@@ -143,14 +143,14 @@
         ".prettierignore",
         ".prettierrc.json",
         "license",
-        "readme.md",
         "readme-api.md",
+        "readme.md",
         "commit-template.hbs",
         "commitlint.config.ts",
         "default-template.hbs",
         "emojitypescommitmessages.txt",
-        "package-lock.json",
         "jest.config.json",
+        "package-lock.json",
         "package.json",
         "release.config.ts",
         "renovate.json",
@@ -159,8 +159,8 @@
         ".vscode/settings.json",
         "public/.gitkeep",
         "repo_management_files/branchnamingconventions.md",
-        "repo_management_files/cz-type-extract.js",
         "repo_management_files/cz-emoji-type-extract.js",
+        "repo_management_files/cz-type-extract.js",
         "repo_management_files/directorystructuredocument.md",
         "repo_management_files/extractfilescopes.js",
         "repo_management_files/genericcommitmessages.md",
@@ -168,9 +168,17 @@
         "repo_management_files/issues.sh",
         "repo_management_files/labels.sh",
         "repo_management_files/packagejsondocument.md",
+        ".github/dependabot.yml",
+        ".github/workflows/build.yml",
+        ".github/workflows/depcheck.yml",
+        ".github/workflows/docs.yml",
+        ".github/workflows/lint.yml",
+        ".github/workflows/pr.yml",
+        ".github/workflows/release.yml",
+        ".github/workflows/test.yml",
+        ".husky/commit-msg",
         ".husky/pre-commit",
         ".husky/prepare-commit-msg",
-        ".husky/commit-msg",
         ".husky/_/.gitignore",
         ".husky/_/applypatch-msg",
         ".husky/_/commit-msg",
@@ -186,35 +194,27 @@
         ".husky/_/pre-push",
         ".husky/_/pre-rebase",
         ".husky/_/prepare-commit-msg",
-        ".github/dependabot.yml",
-        ".github/workflows/build.yml",
-        ".github/workflows/depcheck.yml",
-        ".github/workflows/docs.yml",
-        ".github/workflows/lint.yml",
-        ".github/workflows/pr.yml",
-        ".github/workflows/release.yml",
-        ".github/workflows/test.yml",
         "src/app.ts",
         "src/bin/.gitkeep",
         "src/configs/.gitkeep",
         "src/controllers/.gitkeep",
-        "src/middleware/.gitkeep",
         "src/models/.gitkeep",
-        "src/plugins/.gitkeep",
+        "src/middleware/.gitkeep",
         "src/routes/.gitkeep",
-        "src/utils/.gitkeep",
+        "src/plugins/.gitkeep",
         "src/views/.gitkeep",
+        "src/utils/.gitkeep",
         "test/.gitkeep",
         "test/app.test.ts",
-        "test/bin/.gitkeep",
         "test/configs/.gitkeep",
-        "test/controllers/.gitkeep",
+        "test/bin/.gitkeep",
         "test/middleware/.gitkeep",
+        "test/controllers/.gitkeep",
         "test/plugins/.gitkeep",
-        "test/routes/.gitkeep",
         "test/models/.gitkeep",
-        "test/utils/.gitkeep",
-        "test/views/.gitkeep"
+        "test/routes/.gitkeep",
+        "test/views/.gitkeep",
+        "test/utils/.gitkeep"
       ],
       "questions": {
         "scope": "Specify a scope: "
